--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
   "scripts": {
     "start": "node ./src/app.js",
     "transform": "node ./src/scripts/transformarExcel.js",
-    "send": "node ./src/scripts/enviarMasivo.js",
-    "test-send": "node ./src/scripts/enviarMensajePrueba.js",
-    "test-template": "node ./src/scripts/enviarTemplatePrueba.js",
-    "masivo": "node ./src/scripts/enviarTemplateMasivoExcel.js"
+    "send": "node ./src/scripts/enviarTemplateMasivoExcel.js"
   },
   "dependencies": {
-    "xlsx": "^0.18.5",
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "p-queue": "^7.1.0"
+    "multer": "^1.4.5-lts.1",
+    "p-queue": "^7.1.0",
+    "xlsx": "^0.18.5",
+    "googleapis": "^144.0.0"
   }
 }
