--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
+    "googleapis": "^144.0.0",
     "multer": "^1.4.5-lts.1",
     "p-queue": "^7.1.0",
-    "xlsx": "^0.18.5",
-    "googleapis": "^144.0.0"
+    "xlsx": "^0.18.5"
   }
 }
