--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider nodemon src/app.js"
   },
   "type": "module",
   "keywords": [],
