--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node --openssl-legacy-provider src/app.js"
   },
   "engines": {
     "node": "16.x"
